<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/notificationsFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="app.i.cdms.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="app.i.cdms.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="app.i.cdms.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/action_notificationsFragment_to_graph_team"
            app:destination="@id/navigation_team" />
    </fragment>

    <fragment
        android:id="@+id/channelFragment"
        android:name="app.i.cdms.ui.channel.ChannelFragment"
        android:label="@string/title_channel"
        tools:layout="@layout/fragment_channel" />

    <fragment
        android:id="@+id/bookFragment"
        android:name="app.i.cdms.ui.book.BookFragment"
        android:label="@string/title_book"
        tools:layout="@layout/fragment_book" />

    <fragment
        android:id="@+id/feesFragment"
        android:name="app.i.cdms.ui.fees.FeesFragment"
        android:label="@string/title_fees"
        tools:layout="@layout/fragment_fees" />

    <fragment
        android:id="@+id/aboutLibrariesFragment"
        android:name="app.i.cdms.ui.libraries.AboutLibrariesFragment"
        android:label="About" />

    <fragment
        android:id="@+id/authFragment"
        android:name="app.i.cdms.ui.auth.AuthFragment"
        android:label="@string/action_sign_in" />

    <fragment
        android:id="@+id/orderFragment"
        android:name="app.i.cdms.ui.orderlist.OrderFragment"
        android:label="@string/title_order_list" />

    <navigation
        android:id="@+id/navigation_team"
        app:startDestination="@id/teamFragment">
        <fragment
            android:id="@+id/teamFragment"
            android:name="app.i.cdms.ui.team.TeamFragment"
            android:label="@string/title_team"
            tools:layout="@layout/fragment_team">
            <action
                android:id="@+id/action_teamFragment_to_agentFragment"
                app:destination="@id/agentFragment" />
        </fragment>
        <fragment
            android:id="@+id/agentFragment"
            android:name="app.i.cdms.ui.agent.AgentFragment"
            android:label="@string/title_agent"
            tools:layout="@layout/fragment_agent">
            <action
                android:id="@+id/action_agentFragment_to_channelFragment"
                app:destination="@id/channelFragment" />
        </fragment>
    </navigation>
</navigation>