<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/fragment_horizontal_margin"
    android:paddingVertical="@dimen/fragment_vertical_margin"
    tools:context=".ui.agent.AgentFragment">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/iv_avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:roundPercent="1"
        app:srcCompat="@drawable/ic_avatar" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/material_on_surface_emphasis_high_type"
        app:layout_constraintBottom_toTopOf="@+id/tv_balance"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintBottom_toBottomOf="@+id/tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/tv_username"
        app:layout_constraintTop_toTopOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_earns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintBottom_toBottomOf="@+id/tv_balance"
        app:layout_constraintStart_toStartOf="@+id/tv_id"
        app:layout_constraintTop_toTopOf="@+id/tv_balance" />

    <TextView
        android:id="@+id/tv_channel_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/agent_channel_count"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintEnd_toStartOf="@+id/tv_sub_user_count"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

    <TextView
        android:id="@+id/tv_sub_user_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agent_sub_user_count"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintBottom_toBottomOf="@+id/tv_channel_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_channel_count"
        app:layout_constraintTop_toTopOf="@+id/tv_channel_count" />

    <TextView
        android:id="@+id/tv_sto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agent_sto_order_count"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintBottom_toBottomOf="@+id/tv_yto"
        app:layout_constraintEnd_toStartOf="@+id/tv_yto"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_yto" />

    <TextView
        android:id="@+id/tv_yto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agent_yto_order_count"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintBottom_toBottomOf="@+id/tv_jd"
        app:layout_constraintEnd_toStartOf="@+id/tv_jd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_sto"
        app:layout_constraintTop_toTopOf="@+id/tv_jd" />

    <TextView
        android:id="@+id/tv_jd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agent_jd_order_count"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dpk"
        app:layout_constraintEnd_toStartOf="@+id/tv_dpk"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_yto"
        app:layout_constraintTop_toTopOf="@+id/tv_dpk" />

    <TextView
        android:id="@+id/tv_dpk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/agent_dpk_order_count"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_jd"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_user_count" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/agent_channel_config"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/material_on_surface_emphasis_high_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sto" />

    <TextView
        android:id="@+id/tvFirstWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/config_first_weight"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvFirstCommission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_first_commission"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintStart_toStartOf="@+id/tvFirstWeight"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstWeight" />

    <TextView
        android:id="@+id/tvAddCommission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_add_commission"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintStart_toStartOf="@+id/tvFirstCommission"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstCommission" />

    <Button
        android:id="@+id/btn_update_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:text="@string/agent_update_channel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddCommission"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/agent_channel_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update_channel"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agent_transfer"
        app:layout_constraintBottom_toTopOf="@+id/btn_withdraw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_channel" />

    <Button
        android:id="@+id/btn_withdraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agent_withdraw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_transfer" />

</androidx.constraintlayout.widget.ConstraintLayout>